# beeui

./: .env.example  .gitignore  CHANGELOG.md  README.ru.md  pyproject.toml  start.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: issue.md
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/release-please/: config.json
config/: schema.yml  settings.yml  start.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  COMPONENTS.md  CONFIG.md  CONTRIBUTING.md  DEV_GUIDE.md  INTEGRATION.md  ROADMAP.md  SDLC.md  SECURITY.md  SPEC.md  WEB_UI.md
examples/beecap_embedded/: beeui.yml
src/beeui_module/adapters/: base.py  beecap.py  envelopes.py  errors.py  ids.py
src/beeui_module/api/: envelopes.py
src/beeui_module/artifacts/: models.py  preview.py  redaction.py  routes.py
src/beeui_module/auth/: csrf.py  dependencies.py  models.py  routes.py  service.py  sessions.py
src/beeui_module/blocks/: layout_renderer.py  models.py  registry.py  renderers.py
src/beeui_module/cli/: doctor.py  main.py  serve.py  web.py
src/beeui_module/core/: log.py  paths.py  settings.py  version.py
src/beeui_module/data/: models.py  resolver.py  selectors.py  sources.py
src/beeui_module/pages/: component_catalog.py  config.py  detail.py  links.py  locale.py  models.py  product_console.py  router.py
tests/: test_adapters.py  test_app.py  test_artifacts.py  test_beecap_adapter.py  test_blocks.py  test_cli.py  test_config.py  test_data.py  test_embedded.py  test_links.py  test_locale.py  test_pages.py  test_paths.py  test_product_console.py  test_security.py  test_smoke.py
(+65 files in other folders)
